--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Hello My name is Restu, I am a programmer
-    I am learning at Timedoors.
+    I am learning at Timedoors. My teacher is Mr Wahyu.
 </h1>
